--- a/source/_posts/计算递归表达式复杂度.md
+++ b/source/_posts/计算递归表达式复杂度.md
@@ -2,7 +2,7 @@
 >
 >​									来自“这话我没说过的”的鲁迅
 
-​	递归在程序设计中，有着非常重要的地位，有了递归，我们可以更方便的表达程序逻辑，递归的好处在于其便于大家理解，坏处是计算递归的算法复杂度可能是一件复杂的事，同时，如何写出正确的递归往往需要考虑很多方面。这里，根据MIT的6.046J *Introduction to Algorithm*s相关讲义，谈谈如何求解一个递归表达式的算法复杂度。
+​	递归在程序设计中，有着非常重要的地位，有了递归，我们可以更方便的表达程序逻辑，递归的好处在于其便于大家理解，坏处是计算递归的算法复杂度可能是一件复杂的事，同时，如何写出正确的递归往往需要考虑很多方面。这里，根据MIT的6.046J *Introduction to Algorithm*s 相关讲义和 *算法导论* ，谈谈如何求解一个递归表达式的算法复杂度。
 
 1. xjb猜法（最常见的方法）
 
@@ -18,10 +18,10 @@
 
    Sovle:
 
-      	1. 我们不妨断定$T(1) = \theta(1)$
-        2. 根据经验，算法复杂度可能是$O(n^3)$, (xjb猜)
-         3. 不妨假设当$k < n$时有$T(k) \le ck^3$ （这个c是参变量）
-         4. 证明$T(n)\lt cn^3$
+          	1. 我们不妨断定$T(1) = \theta(1)$
+           	2. 根据经验，算法复杂度可能是$O(n^3)$, (xjb猜)
+            	3. 不妨假设当$k < n$时有$T(k) \le ck^3$ （这个c是参变量）
+            	4. 证明$T(n)\lt cn^3$
 
    这就是一个常见的一个套路只要遵循这个套路，最后给出证明，即可，应用的数学原理是数学归纳法
 
@@ -104,9 +104,45 @@
    然后比较$f(n)$ 与 $n^{log_ba}$ 的大小
 
    * 当存在一个$\epsilon \gt 0$ 有 $f(n)  = O(n^{log_ba-\epsilon})$ 即意味着$f(n)$在多项式时间内增长的比$n^{log_ba}$要慢，所以，$T(n) = \Theta(n^{log_ba})$
-   * 当存在一个$k \gt 0$ 有 $f(n) = \Theta(n^{log_ba} \lg^k n)$ 即意味着$f(n)$与$n^{log_ba}$增长速率相同，所以有，$T(n) = \Theta(n^{log_ba} \lg ^{k+1} n)$
-   * 当存在一个$\epsilon \gt 0$ 有 $f(n) = \Omega(n^{log_ba+\epsilon})$ 即意味着$f(n)$在多项式时间内增长的比$n^{log_ba}$要快,所以，$T(n) = \Theta(f(n))$
+   * 若 $f(n) = \Theta(n^{log_ba})$ 有$T(n) = \Theta(n^{log_ba} \lg n)$
+   * 若有一个常数 $c < 1$及 所有的 $n\ge b, af(\frac{n}{b}） \le cf(n) $ 则 $T(n) = \Theta(f(n))$
 
    证明方式和第二种类似
 
    $T(\frac{n}{b}) = aT(\frac{n}{b^2}) + f(\frac{n}{b})$
+
+   根据迭代，我们可以给出一个精确的数学公式描述总代价
+
+   $\sum_{i=0}^{log_bn-1}a^if(\frac{n}{b^i}) $
+
+   即现在的问题转换成了如何去求这个求和公式
+
+   * 在第一种情况下，有 $f(n) = O(n^{log_ba-\epsilon})$ ，即有 $f(\frac{n}{b^i}) = O((\frac{n}{b^i}) ^ {log_ba-\epsilon})$ ，所以原级数公式可以代换为 $\sum_{i=0}^{log_b n -1} a^i O((\frac{n}{b^i}) ^ {log_ba-\epsilon})$  即为 $O(\sum_{i=0}^{log_b n -1} a^i (\frac{n}{b^i}) ^ {log_ba-\epsilon})$ 所以问题继续变成求解这个级数。
+
+     $\sum_{i=0}^{log_b n -1} a^i (\frac{n}{b^i}) ^ {log_ba-\epsilon} = n^{log_b a-\epsilon} \sum_{i=0}^{log_b n -1}(\frac{ab^\epsilon}{b^{log_ba}})^i $  （在这个级数中 变量是 $i$ ，所以可以将 $n^{log_b a - \epsilon}$ 提出化简。
+
+     有指数和对数定义，可化简分母，得到
+
+      $\sum_{i=0}^{log_b n -1}(\frac{ab^\epsilon}{b^{log_ba}})^i = \sum_{i=0}^{log_b n -1}(b^\epsilon)^i$ 
+
+     由级数求和公式得
+
+     $\sum_{i=0}^{log_b n -1}(b^\epsilon)^i = \frac{b^{\epsilon log_b n - 1}}{b^{\epsilon} - 1} = \frac{n^{\epsilon} - 1}{b ^{\epsilon} - 1}$
+
+     又 $b$ 与$\epsilon$ 都是常数，所以$\frac{n^{\epsilon} - 1}{b ^{\epsilon} - 1}  = O(n^{\epsilon}) $ 
+
+     所以可得$n^{log_b a-\epsilon} O(n^\epsilon) = O(n^{log_b a})$
+
+   * 在第二种情况下，有 $f(n) = \Theta(n^{log_b a})$，即有$f(\frac{n}{b^i}) = \Theta((\frac{n}{b^i}) ^ {log_ba})$ ，所以原级数公式可以代换成$\sum_{i=0}^{log_b n -1} a^i \Theta((\frac{n}{b^i}) ^ {log_ba})$ 即为$\Theta(\sum_{i=0}^{log_b n -1} a^i (\frac{n}{b^i}) ^ {log_ba})$ 所以即求解这个级数。
+
+     $\sum_{i=0}^{log_b n -1} a^i (\frac{n}{b^i}) ^ {log_ba} = n ^{log_b a} \sum_{i=0} ^{log_ b n - 1} \frac{a^{i}}{a^i} = n ^{log_b a}\sum_{i=0}^{log_b n-1} 1= n ^{log_b a}log _b n $  
+
+     所以第二种情况得证。
+
+   * 第三种情况，假设对常数 $c < 1$ 和所有的 $n \ge b$ 有$ a f(\frac{n}{b}) \le c f(n) $ ，有 $f(\frac{n}{b}) \le \frac{c}{a} f(n)$ ，所以 $i$ 次迭代后，有 $f(\frac{n}{b^i}) \le (\frac{c}{a})^i f(n)$ 即 $a^if(\frac{n}{b^i}) \le c^if(n)$
+
+     所以，可以使用放缩求出结果
+
+     $\sum_{i=0}^{log_bn-1}a^if(\frac{n}{b^i}) \le \sum_{i=0}^{log_bn-1} c^i f(n) \le f(n) \sum_{i=o} ^{\infty}c^i = f(n)(\frac{1}{1-c} )= O(f(n))$   
+
+   之上仅仅证明了 $n$ 是 $b$ 的整数幂时的情况。但类似的，如果 $n$ 不是 $b$ 的整数次幂时，仅仅改变了求和级数的上界，这里不给出详细的证明。
