--- a/source/_posts/求解数独.md
+++ b/source/_posts/求解数独.md
@@ -2,7 +2,7 @@
 
 ​	数独我们可以用一个9*9的二维矩阵存，因为是回溯法，我们还需要一个标识是否求解完成的状态位`finished`，基本思路是从`sudoku[0][0]`开始检查是否为0，如果为0，即可以开始尝试填数字，如果不为0，则向左继续搜索，基本规则尽可能的先填满一行，然后再填另一行 ，直到填满所有的空位，此时搜索结束。
 
-​	基本思路很简单，但是最开始一直错的原因是并没有使用标识位，导致最后的搜索完没有正确退出。然后gg。
+​	基本思路很简单，但是最开始一直错的原因是并没有使用标识位，导致最后的搜索完没有正确退出。然后gg。一个需要注意的地方是，如果填好一个数字后，填下一个数字时，所有数字均不可行，那么，在回退时，应置为0。
 
 ​	给出关键代码
 
@@ -18,8 +18,8 @@ void dfs(int row, int col) {
     }
 	if (sudoku[row][col] == 0) {
         for (int i = 1; i <= 9; i++) {
-			sudoku[row][col] = i;
           	if(check(row, col, i) && checkRow(row, col, i) && checkCol(row, col, i)) {
+              	sudoku[row][col] = i;
                 if (col + 1 < 9) {
                     dfs(row, col + 1);
                 }else {
@@ -27,13 +27,13 @@ void dfs(int row, int col) {
                 }
               	if (finished) { //如果搜索完成则直接返回
                     return;
-                }
+                }else
+                  	sudoku[row][col] = 0;
             }
         }
-      	if (!finished) {  //如果没有搜到，则置为0
-            sudoku[row][col] = 0
-        }else 
-          	return;
+      	if (finished) {
+            return;
+        }
     }else {
         if(col + 1 < 9) {
             dfs(row, col + 1);
