--- a/source/_posts/求解数独.md
+++ b/source/_posts/求解数独.md
@@ -1,3 +1,8 @@
+---
+title:求解数独
+date: 2017-03-11
+---
+
 ​	突发奇想，想用计算机求解一下数独。发现似乎并不难写，一个DFS+回溯即可求出正确答案，但还是写了好半天/手动捂脸，在这里记录一下具体操作
 
 ​	数独我们可以用一个9*9的二维矩阵存，因为是回溯法，我们还需要一个标识是否求解完成的状态位`finished`，基本思路是从`sudoku[0][0]`开始检查是否为0，如果为0，即可以开始尝试填数字，如果不为0，则向左继续搜索，基本规则尽可能的先填满一行，然后再填另一行 ，直到填满所有的空位，此时搜索结束。
