--- a/source/_posts/计算递归表达式复杂度.md
+++ b/source/_posts/计算递归表达式复杂度.md
@@ -8,7 +8,7 @@ mathjax: true
 >
 >​									来自“这话我没说过的”的鲁迅
 
-​	递归在程序设计中，有着非常重要的地位，有了递归，我们可以更方便的表达程序逻辑，递归的好处在于其便于大家理解，坏处是计算递归的算法复杂度可能是一件复杂的事，同时，如何写出正确的递归往往需要考虑很多方面。这里，根据MIT的6.046J *Introduction to Algorithm*s 相关讲义和 *算法导论* ，谈谈如何求解一个递归表达式的算法复杂度。
+​	递归在程序设计中，有着非常重要的地位，有了递归，我们可以更方便的表达程序逻辑，递归的好处在于其便于大家理解，坏处是计算递归的算法复杂度可能是一件复杂的事，同时，如何写出正确的递归往往需要考虑很多方面。这里，根据MIT的6.046J *Introduction to Algorithms* 相关讲义和 *算法导论* ，谈谈如何求解一个递归表达式的算法复杂度。
 
 1. xjb猜法（最常见的方法）
 
@@ -24,10 +24,10 @@ mathjax: true
 
    Sovle:
 
-          	1. 我们不妨断定$T(1) = \theta(1)$
-           	2. 根据经验，算法复杂度可能是$O(n^3)$, (xjb猜)
-            	3. 不妨假设当$k < n$时有$T(k) \le ck^3$ （这个c是参变量）
-            	4. 证明$T(n)\lt cn^3$
+   1. 我们不妨断定$T(1) = \theta(1)$
+   2. 根据经验，算法复杂度可能是$O(n^3)$, (xjb猜)
+   3. 不妨假设当$k < n$时有$T(k) \le ck^3$ （这个c是参变量）
+   4. 证明$T(n)\lt cn^3$
 
    这就是一个常见的一个套路只要遵循这个套路，最后给出证明，即可，应用的数学原理是数学归纳法
 
