--- a/source/_posts/软件记录.md
+++ b/source/_posts/软件记录.md
@@ -1,2 +1,33 @@
-本帖长期会更新，旨在为可能换电脑后快速找到自己经常使用的软件，同时分享一些顺手的软件。(自己的vim备份和zsh备份已在github中备份
+本帖长期会更新，旨在为可能换电脑后快速找到自己经常使用的软件，同时分享一些顺手的软件。(自己的vim和zsh已在github中备份
 
+效率类：
+
+1. 幕布  一个用来整理笔记的地方
+2. chrome 装机必备
+3. wechat  国民必备
+4. 迅雷 macOS上的迅雷真是良心
+5. Adobe 系列选装 
+6. Evernote 印象笔记
+7. Mounty 完美解决u盘格式问题
+8. Pap.er 给你一个好的桌面
+9. smcFanControl 可以监控你的电脑温度，同时设定模式
+10. TeamViewer ~~多次远程操作妹子电脑~~
+11. The Unarchiver 打开一些命令行无能的压缩包
+12. Typora md**神器**
+13. Pin 一个可以记录历史的粘贴板
+14. KarabinerElements 改键大法好
+15. IINA 符合mac设计的播放器
+16. iCHM 看chm文件的
+
+专业类：
+
+1. BurpSuite 抓包必备
+2. iTerm2 比原生termianl不知道高到哪里去了
+3. IDEA
+4. Postman 一个发包神器
+5. PyCharm
+6. Sequel Pro 一个可视化的数据库软件
+7. ShadowsocksX-NG
+8. Visual Studio Code 微软教你做编辑器系列
+9. Wireshark 网络抓包必备
+10. Xcode 必备
