--- a/source/_posts/软件记录.md
+++ b/source/_posts/软件记录.md
@@ -1,4 +1,8 @@
-本帖长期会更新，旨在为可能换电脑后快速找到自己经常使用的软件，同时分享一些顺手的软件。(自己的vim和zsh已在github中备份
+---
+title: 软件记录
+date: 2018-03-23
+---
+本帖长期会更新，旨在为可能换电脑后快速找到自己经常使用的软件，同时分享一些顺手的软件。(欢迎大家在github上提issue
 
 效率类：
 
