--- a/source/_posts/详解自动跳一跳源码.md
+++ b/source/_posts/详解自动跳一跳源码.md
@@ -2,7 +2,7 @@
 title: 详解自动跳一跳源码
 date: 2018-03-28
 ---
-这篇文章带你进一步剖析如何利用python实现电脑端的自动跳一跳。项目地址:https://github.com/wangshub/wechat_jump_game，可以找到源码并学习。
+这篇文章带你进一步剖析如何利用python实现电脑端的自动跳一跳。[项目地址在这](https://github.com/wangshub/wechat_jump_game) 可以找到源码并学习。
 
 这个项目是微信刚出跳一跳的时候，是项目作者自己开发并开源的，最初的版本并没有现在看到的这么成熟，但是在短短的一周时间内刷到了1k的star，功能也从最开始不支持iOS，只能在电脑端点击两点距离进化成了跨平台，自动跳跃。这篇文章并不会纠结于ABD的使用和修改签名，仅仅是从作者的思路出发，在默认已有截图的情况下，分析如何做到识别棋子并跳跃的过程。
 
