--- a/source/_posts/详解自动跳一跳源码.md
+++ b/source/_posts/详解自动跳一跳源码.md
@@ -1,6 +1,7 @@
 ---
 title: 详解自动跳一跳源码
 date: 2018-03-28
+auto_excerpt: true
 ---
 这篇文章带你进一步剖析如何利用python实现电脑端的自动跳一跳。[项目地址在这](https://github.com/wangshub/wechat_jump_game) 可以找到源码并学习。
 
