--- a/source/_posts/详解自动跳一跳源码.md
+++ b/source/_posts/详解自动跳一跳源码.md
@@ -1,7 +1,6 @@
 ---
 title: 详解自动跳一跳源码
 date: 2018-03-28
-auto_excerpt: true
 ---
 这篇文章带你进一步剖析如何利用python实现电脑端的自动跳一跳。[项目地址在这](https://github.com/wangshub/wechat_jump_game) 可以找到源码并学习。
 
@@ -11,6 +10,7 @@ auto_excerpt: true
 
 核心思路：找到棋子的位置，识别下一步的位置，模拟按压时间
 
+<!--more-->
 找到棋子的代码如下：
 
 ````python
