--- a/source/_posts/软件记录.md
+++ b/source/_posts/软件记录.md
@@ -1,6 +1,7 @@
 ---
 title: 软件记录
 date: 2018-03-23
+Update: 2018-05-21
 ---
 本帖长期会更新，旨在为可能换电脑后快速找到自己经常使用的软件，同时分享一些顺手的软件。(欢迎大家在github上提issue
 
@@ -17,13 +18,15 @@ date: 2018-03-23
 9. smcFanControl 可以监控你的电脑温度，同时设定模式
 10. TeamViewer ~~多次远程操作妹子电脑~~
 11. The Unarchiver 打开一些命令行无能的压缩包
-12. Typora md**神器**
+12. Typora markdown**神器**
 13. Pin 一个可以记录历史的粘贴板
 14. KarabinerElements 改键大法好
 15. IINA 符合mac设计的播放器
 16. iCHM 看chm文件的
+17. Dropbox 初始2gb免费空间
+18. Magnet 快速改变软件所占屏幕大小
 
-专业类：
+Pro：
 
 1. BurpSuite 抓包必备
 2. iTerm2 比原生termianl不知道高到哪里去了
